<resources>
    <string name="app_name">Nail_it</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="selamat_datang_kembali">Selamat Datang Kembali!</string>
    <string name="masuk_kembali_ke_akunmu">Masuk kembali ke akunmu, dan nikmati fitur lengkap dari nail.it!</string>
    <string name="email">Email</string>
    <string name="email_hint">Email kamu</string>
    <string name="title_pw">Kata Sandi</string>
    <string name="hint_pw">••••••••</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="btn_masuk">Masuk</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="masuk_dengan_apple_id">Masuk dengan Apple ID</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
    <string name="title_register">Buat Akun nail.it!</string>
    <string name="reg_desk">Masukan data diri dan daftarkan akunmu untuk menikmati fitur lengkap dari nail.it!</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="btn_selanjutnya_reg">Selanjutnya</string>
    <string name="text_di_tengah_reg">atau</string>
    <string name="lengkapi_data_diri">Lengkapi Data Diri</string>
    <string name="pastikan_data_diri_yang_kamu_tuliskan_sudah_benar">Pastikan data diri yang kamu tuliskan sudah benar.</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_hint">Kahfi Smith</string>
    <string name="provinsi">Provinsi</string>
    <string name="provinsi_hint">Jawa Timur</string>
    <string name="nomor_telp">Nomor Telp.</string>
    <string name="notelp_hint">8000000000000</string>
    <string name="daftar">Daftar</string>
    <string name="kebijakan_lengkapidata">Dengan mengklik Daftar, kamu telah membaca dan menyetujui Kebijakan Penggunaan dan Kebijakan Privasi</string>
    <string name="pilih_preferensi">Pilih Preferensi</string>
    <string name="pilih_pref_desk">Kami akan merekomendasikan lowongan berdasarkan preferensi yang kamu pilih.</string>
    <string name="search_hint_pilihPref">Cari Pekerjaan</string>
    <string name="cari_berdasarkan_kategori">Cari berdasarkan kategori</string>
    <string name="cat1_pilihPref">Programming</string>
    <string name="tv_cat2">Business</string>
    <string name="digital_marketing">Digital Marketing</string>
    <string name="programming">Programming</string>
    <string name="business">Business</string>
    <string name="product_design"><![CDATA[Product & Design]]></string>
    <string name="data_analyst"><![CDATA[Data & Analyst]]></string>
    <string name="human_resource">Human Resource</string>
    <string name="security">Security</string>

    <string name="titlekategori">Kategori Programming</string>
    <string name="deskripsikategori">Kami akan merekomendasikan lowongan berdasarkan prefensi yang kamu pilih</string>
    <string name="deskripsikategori2">Kamu bisa menambahkan hingga 8 pekerjaan</string>
    <string name="rekomendasipekerjaan">Pekerjaan Cocok Denganmu</string>
    <string name="todo">TODO</string>
=======
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pekerjaan_cocok_denganmu">Pekerjaan Cocok Denganmu</string>
    <string name="tampilkan_semua_1">Tampilkan semua</string>
    <string name="challange_terbaru">Challange Terbaru</string>
    <string name="cari_pekerjaan_hint">Cari Pekerjaan</string>
    <string name="pekerjaan_untuk_kamu">Pekerjaan Untuk Kamu</string>

    >>>>>>> f4bb0bf5a9a63b1a30fe2b32c395ea480c4709a9

</resources>