<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/gray700"
                android:text="@string/selamat_datang_kembali"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/desk1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masuk_kembali_ke_akunmu"
                app:layout_constraintTop_toBottomOf= "@id/title1"
                android:textSize="18sp"
                android:textColor="@color/gray500"

                />

            <TextView
                android:id="@+id/title_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textColor="@color/gray500"
                app:layout_constraintTop_toBottomOf="@+id/desk1"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/title_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint">
            </EditText>

            <TextView
                android:id="@+id/title_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_pw"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textColor="@color/gray500"
                app:layout_constraintTop_toBottomOf="@+id/et_email"/>

            <EditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pw"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/title_pw"
                >
            </EditText>

            <TextView
                android:id="@+id/tv_lupaSandi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lupa_kata_sandi"
                android:textSize="18sp"
                android:textColor="@color/blue_primary"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/et_pw"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btn_masuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_masuk"
                android:background="@drawable/btn_masuk_rounded"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_lupaSandi"
                >
            </Button>

            <Button
                android:id="@+id/btn_masukGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masuk_dengan_google"
                android:textColor="@color/gray700"
                android:backgroundTint="@color/white"
                android:layout_marginTop="100dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_masuk"
                >
            </Button>

            <Button
                android:id="@+id/btn_masukApple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masuk_dengan_apple_id"
                android:textColor="@color/gray700"
                android:backgroundTint="@color/white"
                android:layout_marginTop="20dp"

                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_masukGoogle"
                >
            </Button>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun_daftar"
                android:textSize="18sp"
                android:textColor="@color/blue_primary"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toBottomOf="@id/btn_masukApple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</RelativeLayout>