<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegisterActivity">


            <LinearLayout
                android:id="@+id/ll_title_register"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/svgImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_left"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_register"
                    android:textSize="30sp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_title_register"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_reg_desk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_desk"
                android:textSize="18sp"
                android:textColor="@color/gray500"
                tools:ignore="MissingConstraints"
                />

            <TextView
                android:id="@+id/title_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textColor="@color/gray500"
                app:layout_constraintTop_toBottomOf="@+id/tv_reg_desk"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/title_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:importantForAutofill="no">
            </EditText>

            <TextView
                android:id="@+id/title_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_pw"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textColor="@color/gray500"
                app:layout_constraintTop_toBottomOf="@+id/et_email"/>

            <EditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pw"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/title_pw"
                android:importantForAutofill="no">
            </EditText>

            <TextView
                android:id="@+id/title_pw_konfirmasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/konfirmasi_kata_sandi"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textColor="@color/gray500"
                app:layout_constraintTop_toBottomOf="@+id/et_pw"/>

            <EditText
                android:id="@+id/et_pw_konfirmasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pw"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/title_pw_konfirmasi"
                android:importantForAutofill="no">
            </EditText>

            <Button
                android:id="@+id/btn_selanjutnya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_selanjutnya_reg"
                android:background="@drawable/btn_masuk_rounded"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/et_pw_konfirmasi"
                >
            </Button>

            <LinearLayout
                android:id="@+id/ll_atau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="60dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/btn_selanjutnya">



                <!-- Divider kiri -->
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:dividerColor="@color/gray300"
                    android:layout_weight="1"/>


                <!-- TextView ditengah -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/gray400"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/text_di_tengah_reg"/>

                <!-- Divider kanan -->
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:dividerColor="@color/gray300"/>

            </LinearLayout>
            <Button
                android:id="@+id/btn_masukGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masuk_dengan_google"
                android:textColor="@color/gray700"
                android:backgroundTint="@color/white"
                android:layout_marginTop="60dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_atau"
                >
            </Button>

            <Button
                android:id="@+id/btn_masukApple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masuk_dengan_apple_id"
                android:textColor="@color/gray700"
                android:backgroundTint="@color/white"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_masukGoogle"

                >
            </Button>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun_daftar"
                android:textSize="18sp"
                android:textColor="@color/blue_primary"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/btn_masukApple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>