<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LengkapiDataDiriActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_title_lengkapi_data"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/svgImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lengkapi_data_diri"
            android:textSize="30sp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_title_lengkapi_data"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_reg_desk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pastikan_data_diri_yang_kamu_tuliskan_sudah_benar"
                android:textSize="18sp"
                android:textColor="@color/gray500"
                tools:ignore="MissingConstraints"
                />

            <TextView
                android:id="@+id/title_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textColor="@color/gray500"
                app:layout_constraintTop_toBottomOf="@+id/tv_reg_desk"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_nama_lengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:startIconDrawable="@drawable/profile_1"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxBackgroundMode="outline"
                app:layout_constraintTop_toBottomOf="@+id/title_email">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/nama_hint"

                    >
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/title_provinsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/provinsi"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textColor="@color/gray500"
                app:layout_constraintTop_toBottomOf="@+id/et_nama_lengkap"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_provinsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxBackgroundMode="outline"
                app:startIconDrawable="@drawable/location"
                app:layout_constraintTop_toBottomOf="@+id/title_provinsi"
                android:importantForAutofill="no">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/provinsi_hint"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/title_noTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomor_telp"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textColor="@color/gray500"
                app:layout_constraintTop_toBottomOf="@+id/et_provinsi"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_notelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"

                app:layout_constraintTop_toBottomOf="@+id/title_noTelp"
                android:importantForAutofill="no">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/notelp_hint"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_desk_kebijakan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/kebijakan_lengkapidata"
                app:layout_constraintTop_toBottomOf="@id/et_notelp"/>

            <Button
                android:id="@+id/btn_selanjutnya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:background="@drawable/btn_masuk_rounded"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_desk_kebijakan"
                >
            </Button>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>